--- a/config/databases.yml
+++ b/config/databases.yml
@@ -2,6 +2,6 @@ all:
   doctrine:
     class: sfDoctrineDatabase
     param:
-      dsn: 'mysql:host=localhost:8002;dbname=jobeet'
+      dsn: 'mysql:host=jobeet-db;port=3306;dbname=jobeet'
       username: jobeet
       password: jobeet
