--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -1,16 +1,23 @@
 # You can find more information about this file on the symfony website:
 # http://www.symfony-project.org/reference/1_4/en/10-Routing
 
+job_show_user:
+  url: /job/:company/:location/:id/:position
+  param: { module: job, action: show }
+  requirements:
+    id: \d+
+    sf_method: [get]
+
 # default rules
 homepage:
-  url:   /
-  param: { module: default, action: index }
+  url: /
+  param: { module: job, action: index }
 
 # generic rules
 # please, remove them by adding more specific rules
 default_index:
-  url:   /:module
+  url: /:module
   param: { action: index }
 
 default:
-  url:   /:module/:action/*
+  url: /:module/:action/*
