Use sfDoctrineRoute class to simplify Job routes and add slugify method

--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -3,6 +3,8 @@
 
 job_show_user:
   url: /job/:company/:location/:id/:position
+  class:   sfDoctrineRoute
+  options: { model: JobeetJob, type: object }
   param: { module: job, action: show }
   requirements:
     id: \d+
