--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -1,6 +1,10 @@
 # You can find more information about this file on the symfony website:
 # http://www.symfony-project.org/reference/1_4/en/10-Routing
 
+job:
+  class: sfDoctrineRouteCollection
+  options: { model: JobeetJob }
+
 job_show_user:
   url: /job/:company_slug/:location_slug/:id/:position_slug
   class: sfDoctrineRoute
@@ -17,9 +21,9 @@ homepage:
 
 # generic rules
 # please, remove them by adding more specific rules
-default_index:
-  url: /:module
-  param: { action: index }
+# default_index:
+#   url: /:module
+#   param: { action: index }
 
-default:
-  url: /:module/:action/*
+# default:
+#   url: /:module/:action/*
