--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -3,12 +3,18 @@
 
 job:
   class: sfDoctrineRouteCollection
-  options: { model: JobeetJob }
+  options:
+    model: JobeetJob
+    column: token
+    object_actions: { publish: put }
+  requirements:
+    token: \w+
 
 job_show_user:
   url: /job/:company_slug/:location_slug/:id/:position_slug
   class: sfDoctrineRoute
-  options: { model: JobeetJob, type: object, method_for_query: retrieveActiveJob }
+  options:
+    { model: JobeetJob, type: object, method_for_query: retrieveActiveJob }
   param: { module: job, action: show }
   requirements:
     id: \d+
@@ -24,7 +30,6 @@ category:
 homepage:
   url: /
   param: { module: job, action: index }
-
 # generic rules
 # please, remove them by adding more specific rules
 # default_index:
