--- a/apps/frontend/config/settings.yml
+++ b/apps/frontend/config/settings.yml
@@ -8,7 +8,7 @@ prod:
 
 dev:
   .settings:
-    error_reporting:        <?php echo (E_ALL | E_STRICT)."\n" ?>
+    error_reporting:        <?php echo ((E_ERROR | E_PARSE) ^ E_NOTICE)."\n" ?>
     web_debug:              true
     cache:                  false
     no_script_name:         false
