--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -21,10 +21,12 @@ job_show_user:
     sf_method: [get]
 
 category:
-  url: /category/:slug
-  class: sfDoctrineRoute
-  param: { module: category, action: show }
+  url:     /category/:slug.:sf_format
+  class:   sfDoctrineRoute
+  param:   { module: category, action: show, sf_format: html }
   options: { model: JobeetCategory, type: object }
+  requirements:
+    sf_format: (?:html|atom)
 
 # default rules
 homepage:
